Set up device configuration, added pairing

--- a/app.json
+++ b/app.json
@@ -17,11 +17,6 @@
     "climate"
   ],
   "permissions": [],
-  "images": {
-    "small": "/assets/images/small.png",
-    "large": "/assets/images/large.png",
-    "xlarge": "/assets/images/xlarge.png"
-  },
   "author": {
     "name": "Vadim Chichikalyuk",
     "email": "chichikalyuk@gmail.com"
@@ -32,27 +27,54 @@
         "en": "Nobo Hub"
       },
       "class": "thermostat",
-      "capabilities": [],
+      "capabilities": [
+        "nobo_status_capability"
+      ],
       "platforms": [
         "local"
       ],
       "connectivity": [
         "lan"
       ],
-      "images": {
-        "small": "/drivers/nobo-hub/assets/images/small.png",
-        "large": "/drivers/nobo-hub/assets/images/large.png",
-        "xlarge": "/drivers/nobo-hub/assets/images/xlarge.png"
-      },
+      "settings": [
+        {
+          "id": "serial",
+          "type": "number",
+          "label": {
+            "en": "Serial number"
+          },
+          "hint": {
+            "en": "Your Nobo Hub's serial number (12 digits)"
+          }
+        }
+      ],
       "pair": [
         {
           "id": "list_devices",
           "template": "list_devices",
-          "navigation": {
-            "next": "add_devices"
-          },
           "options": {
             "singular": true
+          },
+          "navigation": {
+            "next": "pincode"
+          }
+        },
+        {
+          "id": "pincode",
+          "template": "pincode",
+          "options": {
+            "title": {
+              "en": "Log in"
+            },
+            "hint": {
+              "en": "Enter the last three digits of the Nobo Hub serial number"
+            },
+            "type": "number",
+            "length": 3,
+            "navigation": {
+              "next": "add_devices",
+              "prev": "list_devices"
+            }
           }
         },
         {
@@ -60,7 +82,37 @@
           "template": "add_devices"
         }
       ],
+      "energy": {
+        "approximation": {
+          "usageConstant": 0
+        }
+      },
       "id": "nobo-hub"
     }
-  ]
+  ],
+  "capabilities": {
+    "nobo_status_capability": {
+      "type": "enum",
+      "values": [
+        {
+          "id": "home",
+          "title": {
+            "en": "At home"
+          }
+        },
+        {
+          "id": "away",
+          "title": {
+            "en": "Away"
+          }
+        }
+      ],
+      "title": {
+        "en": "Mode"
+      },
+      "uiComponent": "picker",
+      "getable": true,
+      "setable": true
+    }
+  }
 }
