Hooked up mode changer to frontend

--- a/app.json
+++ b/app.json
@@ -111,7 +111,7 @@
         {
           "id": "NORMAL",
           "title": {
-            "en": "At home"
+            "en": "Normal"
           }
         },
         {
