--- a/app.json
+++ b/app.json
@@ -21,6 +21,178 @@
     "name": "Vadim Chichikalyuk",
     "email": "chichikalyuk@gmail.com"
   },
+  "flow": {
+    "triggers": [
+      {
+        "id": "nobo_status_capability_changed",
+        "title": {
+          "en": "Nobo Hub status changed"
+        },
+        "tokens": [
+          {
+            "name": "nobo_status_capability",
+            "title": "Nobo Hub status",
+            "type": "string"
+          }
+        ],
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=nobo-hub"
+          }
+        ]
+      },
+      {
+        "id": "nobo_status_capability_changed_to_normal",
+        "title": {
+          "en": "Nobo Hub status changed to Home"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=nobo-hub"
+          }
+        ]
+      },
+      {
+        "id": "nobo_status_capability_changed_to_comfort",
+        "title": {
+          "en": "Nobo Hub status changed to Comfort"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=nobo-hub"
+          }
+        ]
+      },
+      {
+        "id": "nobo_status_capability_changed_to_eco",
+        "title": {
+          "en": "Nobo Hub status changed to Eco"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=nobo-hub"
+          }
+        ]
+      },
+      {
+        "id": "nobo_status_capability_changed_to_away",
+        "title": {
+          "en": "Nobo Hub status changed to Away"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=nobo-hub"
+          }
+        ]
+      }
+    ],
+    "conditions": [
+      {
+        "id": "nobo_status_capability_is",
+        "title": {
+          "en": "Nobo Hub status is..."
+        },
+        "titleFormatted": {
+          "en": "Nobo Hub status is [[mode]]"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=nobo-hub"
+          },
+          {
+            "name": "mode",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "0",
+                "label": {
+                  "en": "Normal"
+                }
+              },
+              {
+                "id": "1",
+                "label": {
+                  "en": "Comfort"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Eco"
+                }
+              },
+              {
+                "id": "3",
+                "label": {
+                  "en": "Away"
+                }
+              }
+            ]
+          }
+        ]
+      }
+    ],
+    "actions": [
+      {
+        "id": "nobo_status_capability_set",
+        "title": {
+          "en": "Set Nobo Hub mode to..."
+        },
+        "formattedTitle": {
+          "en": "Set Nobo Hub mode to [[mode]]"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=nobo-hub"
+          },
+          {
+            "name": "mode",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "0",
+                "label": {
+                  "en": "Normal"
+                }
+              },
+              {
+                "id": "1",
+                "label": {
+                  "en": "Comfort"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Eco"
+                }
+              },
+              {
+                "id": "3",
+                "label": {
+                  "en": "Away"
+                }
+              }
+            ]
+          }
+        ]
+      }
+    ]
+  },
   "drivers": [
     {
       "name": {
