Added insights logging for capability

--- a/app.json
+++ b/app.json
@@ -310,7 +310,8 @@
       },
       "uiComponent": "picker",
       "getable": true,
-      "setable": true
+      "setable": true,
+      "insights": true
     }
   }
 }
